// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlgorithmSelect /> does not crash when no props are supplied 1`] = `
<Input
  autoComplete={true}
  formGroupStyle={Object {}}
  label="Algorithm"
  name="algorithm"
  type="select"
>
  <option
    disabled={false}
    key="pathoscope_bowtie"
    value="pathoscope_bowtie"
  >
    PathoscopeBowtie
  </option>
  <option
    disabled={true}
    key="nuvs"
    value="nuvs"
  >
    NuVs
  </option>
</Input>
`;

exports[`<AlgorithmSelect /> should render an Input component with valid props 1`] = `
<Input
  autoComplete={true}
  formGroupStyle={Object {}}
  label="Algorithm"
  name="algorithm"
  onChange={[MockFunction]}
  type="select"
  value="pathoscope_bowtie"
>
  <option
    disabled={false}
    key="pathoscope_bowtie"
    value="pathoscope_bowtie"
  >
    PathoscopeBowtie
  </option>
  <option
    disabled={true}
    key="nuvs"
    value="nuvs"
  >
    NuVs
  </option>
</Input>
`;
